<resources>
    <string name="app_name">GADS Project</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_1">Learning Leaders</string>
    <string name="tab_2">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="comma">,</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_failed">Submission Not Successful</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>

    <string name="learning_hours"> learning hours, </string>

</resources>