<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/sample"
    tools:context=".Submission">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/cancel" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:alpha="0.8"
            android:textColor="@android:color/holo_orange_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/project_submission"
            android:layout_gravity="center"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/line_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:padding="15dp"
                android:autofillHints="@string/first_name"
                android:background="@drawable/edit_text_shape"/>
            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:autofillHints="@string/last_name"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_shape"
            android:padding="15dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email"/>

        <EditText
            android:id="@+id/githubLink"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_shape"
            android:padding="15dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/project_on_github_link"
            android:inputType="textWebEditText"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:background="@drawable/button_shape3"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>