<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="300dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_cancel"
            android:contentDescription="@string/cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/are_you_sure"
            tools:ignore="RelativeOverlap" />
        <Button
            android:id="@+id/button_yes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/button_shape2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>